Signed-off-by: zhuerqiang <zhuerqiang@news.cn> socket

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express-session":"*",
     "connect-mongo":"*",
     "mongoose":"*",
-    "multer":"*"
+    "multer":"*",
+    "socket.io":"*"
   }
 }
